Add proxy logic.

--- a/pages/archive.html
+++ b/pages/archive.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <script defer src="../scripts/main.js"></script>
+  </head>
   <body>
     <h1>Hello there, from Archive Page Checker!</h1>
   </body>
