Make slight styling changes.

--- a/pages/archive.html
+++ b/pages/archive.html
@@ -2,8 +2,27 @@
 <html lang="en">
   <head>
     <script defer src="../scripts/main.js"></script>
+    <link rel="stylesheet" href="../styles/archive.css" />
   </head>
   <body>
-    <h1>Hello there, from Archive Page Checker!</h1>
+    <div class="container__section__ui">
+      <div id="container__location__url">
+        <p id="text__location__url"></p>
+      </div>
+      <div id="container__input__buttons">
+        <input
+          type="text"
+          value="2000"
+          placeholder="2000"
+          id="input__earliest__year"
+        />
+        <input
+          type="text"
+          value="2020"
+          placeholder="2020"
+          id="input__latest__year"
+        />
+      </div>
+    </div>
   </body>
 </html>
